# c-ethereum-wallet

./: Cargo.toml  LICENSE  Makefile  README.md  wallet
keystore/: UTC--2019-02-15T13-11-47Z--949b7da5-39c4-4e7f-bbe4-a6755ec63ae5
src/: lib.rs  wallet.c  wallet.h
